@@ -12,6 +12,10 @@ MENUPACKAGES=ethdetect hw-detect-full
 VERSION=$(shell dpkg-parsechangelog | grep ^Version: | cut -d ' ' -f 2)
 ARCH=$(shell dpkg --print-architecture)
 
+CFLAGS = -W -Wall -Os
+
+export CFLAGS
+
 # This is the debhelper compatability version to use.
 export DH_COMPAT=2
 
